--- a/testlocation.html
+++ b/testlocation.html
@@ -79,20 +79,23 @@
         }
 
         function clickBt2() {
+            window.addEventListener('devicemotion', function(event) {
+  console.log(event.acceleration.x + ' m/s2');
+});
             window.h5sdk.ready(() => {
                 console.log("进入ready")
-                setTimeout(() => {
-                    tt.openSchema({
-                        schema: 'https://www.apple.com',
-                        external: true,
-                        success(res) {
-                            console.log(`${res}`);
-                        },
-                        fail(res) {
-                            console.log(`open fail`);
-                        }
-                    });
-                }, 1000);
+//                 setTimeout(() => {
+//                     tt.openSchema({
+//                         schema: 'https://www.apple.com',
+//                         external: true,
+//                         success(res) {
+//                             console.log(`${res}`);
+//                         },
+//                         fail(res) {
+//                             console.log(`open fail`);
+//                         }
+//                     });
+//                 }, 1000);
             })
         }
 
