--- a/testlocation.html
+++ b/testlocation.html
@@ -25,8 +25,8 @@
 
         function review() {
             send_obj = {
-                app_id: "cli_9f35e5830735500d",
-                app_secret: "KqAlGgHTeBUwUg50SX2WRe0bI44rs4WH",
+                app_id: "cli_9e929591d0b55101",
+                app_secret: "96AVHS8SJrKMPFWOp6DXueWNECL6Msj5",
                 url: "https://iama1536.github.io/testZDL/testlocation.html"
             }
             send_obj = JSON.stringify(send_obj);
