--- a/testlocation.html
+++ b/testlocation.html
@@ -79,9 +79,14 @@
         }
 
         function clickBt2() {
-            window.addEventListener('devicemotion', function(event) {
+                            if (window.DeviceMotionEvent) {
+                    window.addEventListener('devicemotion', function(event) {
   console.log(event.acceleration.x + ' m/s2');
-});
+}, false);
+                } else {
+                    alert("DeviceMotionEvents are not supported on this device.");
+                }
+
             window.h5sdk.ready(() => {
                 console.log("进入ready")
 //                 setTimeout(() => {
