--- a/testSetMenu.html
+++ b/testSetMenu.html
@@ -132,7 +132,7 @@
             console.log(result);
           }
         });
-
+        window.h5sdk.biz.navigation.setTitle({ title: 'title1' });
 
         console.log('清空右导航');
         window.h5sdk.biz.navigation.setRight({ show: true });
