--- a/testSetMenu.html
+++ b/testSetMenu.html
@@ -18,7 +18,7 @@
   <button id="test2" onclick="setMenuImg()">【测试右导航图片】</button>
   <button id="test2" onclick="setMenuLeftText()">【测试左导航文本】</button>
   <button onclick="document.title = Date.now()">set title</button>
-  <button onclick="window.location.href = \"https://iama1536.github.io/testZDL/testTitle.html\"">set title</button>
+  <button onclick="setHref()">set title</button>
   <script type="text/javascript" src="https://s3.bytecdn.cn/ee/lark/js_sdk/h5-js-sdk-1.4.8.js"></script>
   <script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script>
 
@@ -27,6 +27,11 @@
       var vConsole = new VConsole();
       clearMenu()
     };
+    function setHref() {
+console.log('location.href');
+window.location.href = "https://iama1536.github.io/testZDL/testTitle.html"
+    }
+
     function setMenuImg() {
 
       console.log('测试右导航图片');
