--- a/testTitle.html
+++ b/testTitle.html
@@ -3,10 +3,12 @@
 
 <head>
   <title>商业数据看板</title>
+    <script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script>
 </head>
 <script>
-
-
+    window.onload = function () {
+      var vConsole = new VConsole();
+    };
   addlang = () => {
 
     document.write('navigator.language:' + navigator.language);
@@ -15,13 +17,17 @@
     document.write('<br>navigator.systemLanguage:' + navigator.systemLanguage);
 
   }
-
+    function setHref() {
+console.log('location.href');
+window.location.href = "https://iama1536.github.io/testZDL/testSetMenu.html"
+    }
 </script>
 
 <body>
   <div id="app"></div>
   <button onclick="document.title = Date.now()">set title</button>
   <button onclick="addlang()">set lang</button>
+  <button onclick="setHref()">跳转</button>
 </body>
 
 </html>
