--- a/testSetMenu.html
+++ b/testSetMenu.html
@@ -126,22 +126,22 @@ window.location.href = "https://iama1536.github.io/testZDL/testTitle.html"
     }
 
     function clearMenu() {
-      console.log('清空导航');
-      window.h5sdk.ready(function () {
-                console.log('清空左导航');
-        window.h5sdk.biz.navigation.setLeft({
-          control: true,
-          text: '',
-          isShowIcon: false,
-          onSuccess: function (result) {
+//       console.log('清空导航');
+//       window.h5sdk.ready(function () {
+//                 console.log('清空左导航');
+//         window.h5sdk.biz.navigation.setLeft({
+//           control: true,
+//           text: '',
+//           isShowIcon: false,
+//           onSuccess: function (result) {
 
-            console.log(result);
-          }
-        });
+//             console.log(result);
+//           }
+//         });
         window.h5sdk.biz.navigation.setTitle({ title: 'title1' });
 
         console.log('清空右导航');
-        window.h5sdk.biz.navigation.setRight({ show: true });
+//         window.h5sdk.biz.navigation.setRight({ show: true });
 
     })
   }
