--- a/testSetMenu.html
+++ b/testSetMenu.html
@@ -127,7 +127,7 @@ window.location.href = "https://iama1536.github.io/testZDL/testTitle.html"
 
     function clearMenu() {
 //       console.log('清空导航');
-//       window.h5sdk.ready(function () {
+      window.h5sdk.ready(function () {
 //                 console.log('清空左导航');
 //         window.h5sdk.biz.navigation.setLeft({
 //           control: true,
@@ -143,7 +143,7 @@ window.location.href = "https://iama1536.github.io/testZDL/testTitle.html"
         console.log('清空右导航');
 //         window.h5sdk.biz.navigation.setRight({ show: true });
 
-//     })
+    })
   }
   </script>
 </body>
