--- a/testSetMenu.html
+++ b/testSetMenu.html
@@ -17,7 +17,7 @@
   <button id="test" onclick="setMenuText()">【测试右导航文本】</button>
   <button id="test2" onclick="setMenuImg()">【测试右导航图片】</button>
   <button id="test2" onclick="setMenuLeftText()">【测试左导航文本】</button>
-    <button id="test2" onclick="setTitle()">【测试左导航文本】</button>
+    <button id="test2" onclick="setTitle()">【改标题】</button>
   <button onclick="document.title = Date.now()">set title</button>
   <button onclick="setHref()">跳转</button>
   <script type="text/javascript" src="https://s3.bytecdn.cn/ee/lark/js_sdk/h5-js-sdk-1.4.8.js"></script>
