--- a/testSetMenu.html
+++ b/testSetMenu.html
@@ -26,7 +26,7 @@
   <script>
     window.onload = function () {
       var vConsole = new VConsole();
-//       clearMenu()
+      clearMenu()
     };
     function setHref() {
 console.log('location.href');
@@ -143,7 +143,7 @@ console.log('setTitle');
 //             console.log(result);
 //           }
 //         });
-        window.h5sdk.biz.navigation.setTitle({ title: 'title1' });
+        window.h5sdk.biz.navigation.setTitle({ title: '' });
 
         console.log('清空右导航');
 //         window.h5sdk.biz.navigation.setRight({ show: true });
