--- a/testlocation.html
+++ b/testlocation.html
@@ -27,7 +27,7 @@
             send_obj = {
                 app_id: "cli_9e929591d0b55101",
                 app_secret: "96AVHS8SJrKMPFWOp6DXueWNECL6Msj5",
-                url: "https://iama1536.github.io/testZDL/testlocation.html"
+                url: "https://iama1536.github.io/testZDL/testlocation.html?app_id=cli_9e929591d0b55101"
             }
             send_obj = JSON.stringify(send_obj);
             $.ajax({
