--- a/testlocation.html
+++ b/testlocation.html
@@ -24,10 +24,12 @@
 
 
         function review() {
+            var url = window.location.href;
+            console.log(url)
             send_obj = {
                 app_id: "cli_9e929591d0b55101",
                 app_secret: "96AVHS8SJrKMPFWOp6DXueWNECL6Msj5",
-                url: "https://iama1536.github.io/testZDL/testlocation.html?app_id=cli_9e929591d0b55101"
+                url: url
             }
             send_obj = JSON.stringify(send_obj);
             $.ajax({
