--- a/testTargetWebView.html
+++ b/testTargetWebView.html
@@ -35,6 +35,7 @@
     <div class='add-btn'>
       <button onclick="addTag()">添加标签1</button>
       <button onclick="navigateNew()">跳转</button>
+      <button onclick="openlink()">openlink</button>
     </div>
   </div>
   <script type="text/javascript" src="https://s3.bytecdn.cn/ee/lark/js_sdk/h5-js-sdk-1.4.8.js"></script>
@@ -82,6 +83,17 @@
             }
           });
         })
+      }
+    
+    openlink = () => {
+        // location.href = "https://www.tmall.com/"
+        window.h5sdk.ready(() => {
+          window.h5sdk.biz.util.openLink({
+    url: "https://open.feishu.cn",
+    title: "Open platform",
+    newTab: false
+});
+
       }
   </script>
 </body>
