--- a/testOpenSchema.html
+++ b/testOpenSchema.html
@@ -34,5 +34,7 @@
     <a href="https://iama1536.github.io/testZDL/testlocation.html">定位界面</a>
     <br/>
     <a href="https:///www.baidu.com" target="_self">百度TargetTest</a>
+    <br/>
+    <a href="https://www.concursolutions.com/mobile/ConcurMobileRedirect.asp">ConcurMobileRedirect</a>
   </body>
 </html>
