--- a/testOpenSchema.html
+++ b/testOpenSchema.html
@@ -36,5 +36,7 @@
     <a href="https:///www.baidu.com" target="_self">百度TargetTest</a>
     <br/>
     <a href="https://www.concursolutions.com/mobile/ConcurMobileRedirect.asp">ConcurMobileRedirect</a>
+    <br/>
+    <a href="concurmobile://notification?">ConcurMobile</a>
   </body>
 </html>
